--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "rgbaster-plus",
   "private": false,
-  "version": "1.0.1",
+  "version": "1.1.1",
   "description": "A dead simple typescript library for extracting the dominant color(s) from an image.",
   "type": "module",
   "keywords": [
     "rgb",
     "rgba",
     "image",
-    "typescript"
+    "typescript",
+    "web worker"
   ],
   "main": "lib/rgbaster-plus.umd.js",
   "module": "lib/rgbaster-plus.es.js",
@@ -33,5 +34,8 @@
   "bugs": {
     "url": "https://github.com/Nio1023/rgbaster-plus/issues"
   },
-  "homepage": "https://github.com/Nio1023/rgbaster-plus"
+  "homepage": "https://github.com/Nio1023/rgbaster-plus",
+  "dependencies": {
+    "@types/offscreencanvas": "^2019.7.0"
+  }
 }
